--- a/ourapproach.html
+++ b/ourapproach.html
@@ -176,11 +176,11 @@
                 </div>
             </div>
             <!-- <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 "> -->
-                <p class="move_next_section">
+                <!-- <p class="move_next_section">
                     <a href="#plan_section">
                         <img  class="arrow bounce" src="./images/arrow_down.svg" alt="arrow_down" />
                     </a>
-                </p>
+                </p> -->
             <!-- </div> -->
     </section>
     <!-- end -->
@@ -232,75 +232,7 @@
             </div>
         </div>
     </section>
-    <section class="sticky_tap" id="menu-center" >
-            <div class="container" style="margin: auto;">
-                <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 list_of_team" style="display: flex;justify-content: center;">
-                    <div style="z-index: 1;" class="plan_section section_tap active_section_tap">
-                        <samp class="team_icon " >
-                            <a href="#plan_section" alt="plan_section" style="width: 100%;display: flex;">
-                                <!-- <img src="./images/plan.svg" alt="icons" /> -->
-                                <svg xmlns="http://www.w3.org/2000/svg" width="23" height="24" viewBox="0 0 23 24">
-                                    <g fill="#000" fill-rule="nonzero">
-                                        <path d="M19.862 2.4h-1.241V0h-2.483v2.4H6.207V0H3.724v2.4H2.483C1.11 2.4.013 3.474.013 4.8L0 21.6C0 22.926 1.111 24 2.483 24h17.38c1.37 0 2.482-1.074 2.482-2.4V4.8c0-1.326-1.111-2.4-2.483-2.4zm0 19.2H2.482V8.4h17.38v13.2z"/>
-                                        <path d="M16.552 12.012l-1.347-1.253-6.2 5.77-2.693-2.507-1.346 1.253 4.04 3.76z"/>
-                                    </g>
-                                </svg>
-                            </a>
-                        </samp>
-                        <p style="margin: 0;text-align: center;" class="fontGraphikRegular">Plan</p>
-                    </div>
-                    <div style="z-index: 1;" class="design_section section_tap">
-                        <samp class="team_icon">
-                            <a href="#design_section" alt="design_section" style="width: 100%;display: flex;">
-                                <!-- <img src="./images/design.svg" alt="icons" /> -->
-                                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26">
-                                    <path fill="#000" fill-rule="nonzero" d="M13 0C5.778 0 0 5.778 0 13s5.778 13 13 13c1.156 0 2.167-1.011 2.167-2.167 0-.577-.145-1.01-.578-1.444-.289-.433-.578-.867-.578-1.445 0-1.155 1.011-2.166 2.167-2.166h2.6c4.044 0 7.222-3.178 7.222-7.222C26 5.2 20.222 0 13 0zM5.056 13c-1.156 0-2.167-1.011-2.167-2.167 0-1.155 1.011-2.166 2.167-2.166 1.155 0 2.166 1.01 2.166 2.166S6.212 13 5.056 13zm4.333-5.778c-1.156 0-2.167-1.01-2.167-2.166S8.233 2.889 9.39 2.889c1.155 0 2.167 1.011 2.167 2.167 0 1.155-1.012 2.166-2.167 2.166zm7.222 0c-1.155 0-2.167-1.01-2.167-2.166s1.012-2.167 2.167-2.167c1.156 0 2.167 1.011 2.167 2.167 0 1.155-1.011 2.166-2.167 2.166zM20.944 13c-1.155 0-2.166-1.011-2.166-2.167 0-1.155 1.01-2.166 2.166-2.166s2.167 1.01 2.167 2.166S22.1 13 20.944 13z" opacity=".496"/>
-                                </svg>                                
-                            </a>
-                        </samp>
-                    <p style="margin: 0;text-align: center;" class="fontGraphikRegular">Design</p>
-                    </div>
-                    <div style="z-index: 1;" class="build_section section_tap">
-                        <samp class="team_icon">
-                            <a href="#build_section" alt="build_section" style="width: 100%;display: flex;">
-                               <!-- <img src="./images/build.svg" alt="icons" /> -->
-                               <svg xmlns="http://www.w3.org/2000/svg" width="22" height="25" viewBox="0 0 22 25">
-                                <g fill="#000" fill-rule="nonzero">
-                                    <path d="M1.719 4.844c.312 2.031.625 2.5.625 4.531 0 1.25-2.344 2.344-2.344 2.344v1.562s2.344 1.094 2.344 2.344c0 2.031-.313 2.5-.625 4.531C1.25 23.438 2.969 25 4.53 25h3.282v-3.125S5 22.188 5 20.312c0-1.406.313-1.406.625-4.53.156-1.407-.781-2.5-1.719-3.282.938-.781 1.875-1.719 1.719-3.125C5.156 6.25 5 6.25 5 4.844c0-1.875 2.813-1.719 2.813-1.719V0H4.53C2.813 0 1.25 1.563 1.72 4.844zM20.156 4.844c-.312 2.031-.625 2.5-.625 4.531 0 1.25 2.344 2.344 2.344 2.344v1.562s-2.344 1.094-2.344 2.344c0 2.031.313 2.5.625 4.531.469 3.282-1.25 4.844-2.812 4.844h-3.282v-3.125s2.813.313 2.813-1.563c0-1.406-.313-1.406-.625-4.53-.156-1.407.781-2.5 1.719-3.282-.938-.781-1.875-1.719-1.719-3.125.313-3.125.625-3.125.625-4.531 0-1.875-2.813-1.719-2.813-1.719V0h3.282c1.718 0 3.281 1.563 2.812 4.844z"/>
-                                </g>
-                               </svg>                            
-                            </a>
-                        </samp>
-                    <p style="margin: 0;text-align: center;" class="fontGraphikRegular">Build</p>
-                    </div>
-                    <div style="z-index: 1;" class="deploy_section section_tap">
-                        <samp class="team_icon">
-                          <a href="#deploy_section" alt="deploy_section" style="width: 100%;display: flex;">
-                            <!-- <img src="./images/deploy.svg" alt="icons" /> -->
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25">
-                                <path fill="#000" fill-rule="nonzero" d="M23.897 6.176v-.053c-.026-.053-.026-.106-.052-.158v-.027c-.027-.053-.08-.105-.106-.132l-.026-.026c-.027-.027-.08-.053-.106-.08l-.026-.026h-.027l-.026-.026L12.31.079a.84.84 0 0 0-.712 0L7.825 1.953l11.27 5.78.026.026c.026 0 .026.027.052.027.027.026.027.052.053.079v6.202a.277.277 0 0 1-.132.237l-2.27 1.188c-.132.08-.29.026-.37-.106-.025-.026-.025-.079-.025-.132v-5.99L5.027 3.378l-.026-.026-4.566 2.27-.026.026H.382l-.026.026c-.026.027-.08.053-.106.08l-.026.026c-.053.053-.08.105-.132.158v.027c-.026.052-.053.105-.053.158v.053c0 .052-.026.079-.026.132v12.325c0 .29.158.58.449.712l11.11 5.542c.159.08.344.106.528.053l.053-.026c.053 0 .08-.027.132-.053l11.19-5.542a.795.795 0 0 0 .449-.713V6.308c-.027-.053-.027-.08-.027-.132z" opacity=".496"/>
-                            </svg>                            
-                          </a>
-                        </samp>
-                    <p style="margin: 0;text-align: center;" class="fontGraphikRegular">Deploy</p>
-                    </div>
-                    <div style="z-index: 1;" class="launch_section section_tap">
-                        <samp class="team_icon">
-                          <a href="#launch_section" alt="deploy_section" style="width: 100%;display: flex;">
-                            <!-- <img src="./images/launch.svg" alt="icons" /> -->
-                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25">
-                                <g fill="#000" fill-rule="nonzero">
-                                    <path d="M2.426 13.946c1.91-2.75 3.035-4.522 3.854-5.832-3.15.278-6.168 4.197-6.168 4.197l2.079 2.08a2.16 2.16 0 0 1 .235-.445zM10.542 22.742l2.078 2.077s3.918-3.019 4.197-6.168c-1.31.82-3.08 1.943-5.832 3.854-.14.097-.288.176-.443.237zM7.383 21.668c-.357.144-.707.297-1.073.419-.975.326-1.98.547-3 .687-.427.06-.858.11-1.29.142l.013-.16c.089-1.038.247-2.071.502-3.083.123-.488.28-.962.448-1.436.105-.294.236-.576.368-.858l-.229-.228a5.67 5.67 0 0 0-1.325 1.26 8.275 8.275 0 0 0-1.263 2.405c-.313.927-.5 1.908-.528 2.887-.004.137-.014.277.007.414a.963.963 0 0 0 .656.766c.14.046.282.046.428.045a9.642 9.642 0 0 0 2.64-.414c1.555-.462 3.124-1.33 4.044-2.704l-.222-.222a6.525 6.525 0 0 1-.176.08zM24.678.254a.862.862 0 0 0-.61-.253h-.017c-2.775.055-9.621.574-13.257 4.21-1.65 1.65-2.187 2.51-3.363 4.393-.847 1.356-2.006 3.212-4.125 6.262a.862.862 0 0 0 .099 1.101l5.558 5.56a.861.861 0 0 0 1.102.098c3.05-2.12 4.907-3.278 6.262-4.125 1.883-1.176 2.742-1.712 4.393-3.363C24.362 10.495 24.878 3.652 24.93.88a.863.863 0 0 0-.252-.626zM18.24 10.742a2.866 2.866 0 1 1-4.053-4.052 2.866 2.866 0 0 1 4.053 4.052z"/>
-                                </g>
-                            </svg>                            
-                          </a>
-                        </samp>
-                    <p style="margin: 0;text-align: center;" class="fontGraphikRegular">Launch</p>
-                    </div>
-                    <div class="time_line"></div>
-                </div>
-            </div>
-    </section>
+
     <section class="product_planing" id="tap-menu">
         <div class="container" style="margin: auto;">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 list_of_team" style="display: flex;justify-content: center;">
@@ -344,7 +276,8 @@
                             <img alt="Modern-Engineering" src="./images/Plan.png" />
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6" style="">
+                    
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content">
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <div class="flag" style="background-color: transparent;">
                                 <img alt="monitor" src="./images/combined-shape.svg" />
@@ -393,6 +326,7 @@
                             <img alt="Modern Engineering" src="./images/Plan.png" />
                         </div>
                     </div>
+
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 mobile_tap_section scroll_styles" style="padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(51, 74, 192, 0.17)">
                         <!-- <div class="img_section" style="margin: auto;"> -->
@@ -416,7 +350,7 @@
                             <img alt="Modern-Engineering" src="./images/Design.png" />
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 " >
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content" >
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <div class="flag" style="background-color: transparent;">
                                 <img alt="monitor" src="./images/combined-shape.svg" style="width: 100px;height: 100%;" />
@@ -482,7 +416,7 @@
                             <img alt="Modern-Engineering" src="./images/Build.png" />
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 ">
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content">
                         <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <div class="flag" style="background-color: transparent;">
                                 <img alt="monitor" src="./images/combined-shape.svg" />
@@ -554,14 +488,14 @@
                                 <img alt="Modern-Engineering" src="./images/Deploy.png" />
                             </div>
                         </div>
-                        <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 ">
+                        <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content">
                             <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                                 <div class="flag" style="background-color: transparent;">
                                     <img alt="monitor" src="./images/combined-shape.svg" style="width: 100px;height: 100%;" />
                                     <p class="fontGraphikMedium" style="color: #665cd7;">DEPLOY</p>
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
+                            <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 ">
                                 <h1 class="fontGraphikSemibold">DEPLOY - for products that everyone love.</h1>
                             </div>
                             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
@@ -620,7 +554,7 @@
                                 <img alt="Modern-Engineering" src="./images/Launch.png" />
                             </div>
                         </div>
-                        <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 ">
+                        <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 section_content">
                             <div class="icon_div col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                                 <div class="flag" style="background-color: transparent;">
                                     <img alt="monitor" src="./images/combined-shape.svg" style="width: 100px;height: 100%;" />
@@ -674,7 +608,7 @@
                                 <tapSection style="padding-left: 0;"><span class="active_launch tap5" data-launch="1">1.Freeze</span></tapSection>
                                 <tapSection><span class="tap5" data-launch="2">2.Go&nbsp;Ahead</span></tapSection>
                                 <tapSection><span class="tap5" data-launch="3">3.Checklist</span></tapSection>
-                                <tapSection><span class="tap5" data-launch="4">4.Productio&nbsp;Box</span></tapSection>
+                                <tapSection><span class="tap5" data-launch="4">4.Production&nbsp;Box</span></tapSection>
                                 <tapSection style="padding-right: 0;border: 0;"><span class="tap5" data-launch="5">5.Launch</span></tapSection>
                             </div>
                         </div>
