text title changed

--- a/ourapproach.html
+++ b/ourapproach.html
@@ -164,15 +164,15 @@
     <section class="our_approach_title">
             <div class="container" style="margin: auto;">
                 <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner_flag fontLatoRegular">
-                    <p>Approach — Your journey starts here</p>
+                    <p>Where Madness meets Methods</p>
                 </div>
                 
                 <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 title fontGraphikBold">
-                    <p>Award-winning creative <br/>studio for disrupters</p>
+                    <p>Great products emerge from <br/>modern outlooks</p>
                 </div>
 
                 <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 sub_text fontLatoRegular">
-                    <p> Create, prototype, collaborate and turn your ideas into product <br/>with Crayond.</p>
+                    <p> Learn how we take your product idea and make it into a delightful <br/>experience</p>
                 </div>
             </div>
             <!-- <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 "> -->
@@ -285,7 +285,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <h1 class="fontGraphikSemibold">Planning - for products that everyone love.</h1>
+                            <h1 class="fontGraphikSemibold">Putting ourselves in your shoes to see beyond</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <img alt="line-left" class="divider_line left_line" src="./images/line-left.png" />
@@ -358,7 +358,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <h1 class="fontGraphikSemibold">Planning - for products that everyone love.</h1>
+                            <h1 class="fontGraphikSemibold">Clouds cleared for set the vision on action</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <img alt="line-left" class="divider_line left_line" src="./images/line-left.png" />
@@ -424,7 +424,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <h1 class="fontGraphikSemibold">Planning - for products that everyone love.</h1>
+                            <h1 class="fontGraphikSemibold">All feet set to sprint miles on your roadmap</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <img alt="line-left" class="divider_line left_line" src="./images/line-left.png" />
@@ -496,7 +496,7 @@
                                 </div>
                             </div>
                             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 ">
-                                <h1 class="fontGraphikSemibold">DEPLOY - for products that everyone love.</h1>
+                                <h1 class="fontGraphikSemibold">Constant assembly line brought to your door</h1>
                             </div>
                             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                                 <img alt="line-left" class="divider_line left_line" src="./images/line-left.png" />
@@ -562,7 +562,7 @@
                                 </div>
                             </div>
                             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                                <h1 class="fontGraphikSemibold">LAUNCH - for products that everyone love.</h1>
+                                <h1 class="fontGraphikSemibold">Curtains away. Houston, we’re ready to soar!</h1>
                             </div>
                             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                                 <img alt="line-left" class="divider_line left_line" src="./images/line-left.png" />
