--- a/ourapproach.html
+++ b/ourapproach.html
@@ -330,11 +330,11 @@
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 mobile_tap_section scroll_styles" style="display: flex; padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(51, 74, 192, 0.17)">
                         <!-- <div class="img_section" style="margin: auto;"> -->
-                            <tapSection style="padding-left: 0;margin-left: 0;"><span class="active_code tap" data-code="1">1.Brainstorm</span></tapSection><span class="horizontal_line"></span>
-                            <tapSection><span class="tap" data-code="2">2.Handshake</span></tapSection><span class="horizontal_line"></span>
-                            <tapSection><span class="tap" data-code="3">3.Pen&nbsp;down</span></tapSection><span class="horizontal_line"></span>
-                            <tapSection><span class="tap" data-code="4">4.Ambition&nbsp;vs&nbsp;Purse</span></tapSection><span class="horizontal_line"></span>
-                            <tapSection style="padding-right: 0;border: 0;margin-right: 0;"><span class="tap" data-code="5">5.Sprints&nbsp;&&nbsp;Milestones</span></tapSection>
+                            <tapSection style="padding-left: 0;margin-left: 0;"><span class="active_code tap" data-code="1">1.&nbsp;Brainstorm</span></tapSection><span class="horizontal_line"></span>
+                            <tapSection><span class="tap" data-code="2">2.&nbsp;Handshake</span></tapSection><span class="horizontal_line"></span>
+                            <tapSection><span class="tap" data-code="3">3.&nbsp;Pen&nbsp;down</span></tapSection><span class="horizontal_line"></span>
+                            <tapSection><span class="tap" data-code="4">4.&nbsp;Ambition&nbsp;vs&nbsp;Purse</span></tapSection><span class="horizontal_line"></span>
+                            <tapSection style="padding-right: 0;border: 0;margin-right: 0;"><span class="tap" data-code="5">5.&nbsp;Sprints&nbsp;&&nbsp;Milestones</span></tapSection>
                         </div>
                     </div>
                 </div>
@@ -358,7 +358,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <h1 class="fontGraphikSemibold">Clouds cleared for set the vision on action</h1>
+                            <h1 class="fontGraphikSemibold">Clouds cleared to set the vision on action</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <img alt="line-left" class="divider_line left_line" src="./images/line-left.png" />
@@ -396,11 +396,11 @@
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 mobile_tap_section scroll_styles" style="display: flex;padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(51, 74, 192, 0.17)">
                         <!-- <div class="img_section" style="margin: auto;"> -->
-                            <tapSection style="padding-left: 0;margin-left: 0;"><span class="active_sale tap2" data-sale="1">1.Wireframe</span></tapSection><span class="horizontal_line"></span>
-                            <tapSection><span class="tap2" data-sale="2">2.Sketch</span></tapSection><span class="horizontal_line"></span>
-                            <tapSection><span class="tap2" data-sale="3">3.Visual&nbsp;Design</span></tapSection><span class="horizontal_line"></span>
-                            <tapSection><span class="tap2" data-sale="4">4.Architecture</span></tapSection><span class="horizontal_line"></span>
-                            <tapSection style="padding-right: 0;border: 0;margin-right: 0;"><span class="tap2" data-sale="5">5.Considerations</span></tapSection>
+                            <tapSection style="padding-left: 0;margin-left: 0;"><span class="active_sale tap2" data-sale="1">1.&nbsp;Wireframe</span></tapSection><span class="horizontal_line"></span>
+                            <tapSection><span class="tap2" data-sale="2">2.&nbsp;Sketch</span></tapSection><span class="horizontal_line"></span>
+                            <tapSection><span class="tap2" data-sale="3">3.&nbsp;Visual&nbsp;Design</span></tapSection><span class="horizontal_line"></span>
+                            <tapSection><span class="tap2" data-sale="4">4.&nbsp;Architecture</span></tapSection><span class="horizontal_line"></span>
+                            <tapSection style="padding-right: 0;border: 0;margin-right: 0;"><span class="tap2" data-sale="5">5.&nbsp;Considerations</span></tapSection>
                         </div>
                     </div>
                 </div>
@@ -468,11 +468,11 @@
                     <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 mobile_tap_section scroll_styles" style="display: flex;padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(51, 74, 192, 0.17)">
                         <!-- <div class="img_section" style="margin: auto;"> -->
-                            <tapSection style="padding-left: 0;margin-left: 0;"><span class="active_build tap3" data-build="1">1.Setup&nbsp;Environment</span></tapSection><span class="horizontal_line"></span>
-                            <tapSection><span class="tap3" data-build="2">2.Sprint</span></tapSection><span class="horizontal_line"></span>
-                            <tapSection><span class="tap3" data-build="3">3.Front&nbsp;-&nbsp;End</span></tapSection><span class="horizontal_line"></span>
-                            <tapSection><span class="tap3" data-build="4">4.Back&nbsp;-&nbsp;End</span></tapSection><span class="horizontal_line"></span>
-                            <tapSection style="padding-right: 0;border: 0;margin-right: 0;"><span class="tap3" data-build="5">5.Integration</span></tapSection>
+                            <tapSection style="padding-left: 0;margin-left: 0;"><span class="active_build tap3" data-build="1">1.&nbsp;Setup&nbsp;Environment</span></tapSection><span class="horizontal_line"></span>
+                            <tapSection><span class="tap3" data-build="2">2.&nbsp;Sprint</span></tapSection><span class="horizontal_line"></span>
+                            <tapSection><span class="tap3" data-build="3">3.&nbsp;Front&#8211;End</span></tapSection><span class="horizontal_line"></span>
+                            <tapSection><span class="tap3" data-build="4">4.&nbsp;Back&#x02010;End</span></tapSection><span class="horizontal_line"></span>
+                            <tapSection style="padding-right: 0;border: 0;margin-right: 0;"><span class="tap3" data-build="5">5.&nbsp;Integration</span></tapSection>
                         </div>
                     </div>
                 </div>
@@ -534,11 +534,11 @@
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 mobile_tap_section scroll_styles" style="display: flex;padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(51, 74, 192, 0.17)">
                             <!-- <div class="img_section" style="margin: auto;"> -->
-                                <tapSection style="padding-left: 0;margin-left: 0;"><span class="active_deploy tap4" data-deploy="1">1.Setup&nbsp;CI/CD</span></tapSection><span class="horizontal_line"></span>
-                                <tapSection><span class="tap4" data-deploy="2">2.Releases</span></tapSection><span class="horizontal_line"></span>
-                                <tapSection><span class="tap4" data-deploy="3">3.Quality&nbsp;Assurance</span></tapSection><span class="horizontal_line"></span>
-                                <tapSection><span class="tap4" data-deploy="4">4.Acceptance</span></tapSection><span class="horizontal_line"></span>
-                                <tapSection style="padding-right: 0;border: 0;margin-right: 0;"><span class="tap4" data-deploy="5">5.Build&nbsp;Cycles</span></tapSection>
+                                <tapSection style="padding-left: 0;margin-left: 0;"><span class="active_deploy tap4" data-deploy="1">1.&nbsp;Setup&nbsp;CI/CD</span></tapSection><span class="horizontal_line"></span>
+                                <tapSection><span class="tap4" data-deploy="2">2.&nbsp;Releases</span></tapSection><span class="horizontal_line"></span>
+                                <tapSection><span class="tap4" data-deploy="3">3.&nbsp;Quality&nbsp;Assurance</span></tapSection><span class="horizontal_line"></span>
+                                <tapSection><span class="tap4" data-deploy="4">4.&nbsp;Acceptance</span></tapSection><span class="horizontal_line"></span>
+                                <tapSection style="padding-right: 0;border: 0;margin-right: 0;"><span class="tap4" data-deploy="5">5.&nbsp;Build&nbsp;Cycles</span></tapSection>
                             </div>
                         </div>
                     </div>
@@ -605,11 +605,11 @@
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12 mobile_tap_section scroll_styles" style="display: flex;padding: 26px 16px;margin-top: 4%;background-color: #fff;border-radius: 8px;border: solid 1px rgba(51, 74, 192, 0.17)">
                             <!-- <div class="img_section" style="margin: auto;"> -->
-                                <tapSection style="padding-left: 0;margin-left: 0;"><span class="active_launch tap5" data-launch="1">1.Freeze</span></tapSection><span class="horizontal_line"></span>
-                                <tapSection><span class="tap5" data-launch="2">2.Go&nbsp;Ahead</span></tapSection><span class="horizontal_line"></span>
-                                <tapSection><span class="tap5" data-launch="3">3.Checklist</span></tapSection><span class="horizontal_line"></span>
-                                <tapSection><span class="tap5" data-launch="4">4.Production&nbsp;Box</span></tapSection><span class="horizontal_line"></span>
-                                <tapSection style="padding-right: 0;border: 0;margin-right: 0;"><span class="tap5" data-launch="5">5.Launch</span></tapSection>
+                                <tapSection style="padding-left: 0;margin-left: 0;"><span class="active_launch tap5" data-launch="1">1.&nbsp;Freeze</span></tapSection><span class="horizontal_line"></span>
+                                <tapSection><span class="tap5" data-launch="2">2.&nbsp;Go&nbsp;Ahead</span></tapSection><span class="horizontal_line"></span>
+                                <tapSection><span class="tap5" data-launch="3">3.&nbsp;Checklist</span></tapSection><span class="horizontal_line"></span>
+                                <tapSection><span class="tap5" data-launch="4">4.&nbsp;Production&nbsp;Box</span></tapSection><span class="horizontal_line"></span>
+                                <tapSection style="padding-right: 0;border: 0;margin-right: 0;"><span class="tap5" data-launch="5">5.&nbsp;Launch</span></tapSection>
                             </div>
                         </div>
                     </div>
