--- a/opportunities.html
+++ b/opportunities.html
@@ -88,16 +88,11 @@
                       </a>
                   </div>
                   <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 header_menu">
-                      <span class=""><a class="fontLatoRegular" href="/who-we-are">Who we are</a></span>
-                      <!-- <span><a class="fontLatoRegular" href="/">Products</a></span> -->
-                      <!-- <span><a class="fontLatoRegular" href="/">Pricing</a></span> -->
-                      <span class="active"><a class="fontLatoRegular" href="/opportunities">Opportunities</a> </span>
-                      <span><a class="fontLatoRegular" href="https://medium.com/crayond" target="_blank">Blog</a></span>
-                      <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
-                      <span>
-                          <a class="fontLatoRegular" href="/products">Products</a>
-                          <tag>NEW</tag>
-                      </span>
+                    <span ><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
+                    <span ><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
+                    <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/products">Products</a><tag>NEW</tag></span>
+                    <span><a class="fontLatoRegular" href="https://medium.com/crayond" target="_blank">Blog</a></span>
+                    <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
                   </div>
                   <div class="col-6 col-xs-6 col-sm-6 col-md-3 col-lg-3 col-xl-3 sign_btn">
                       <button class="btn btn-outline-primary fontLatoBlack" onclick="window.location.href = './contact'">TALK TO US</button>
@@ -118,9 +113,13 @@
       </div>
       <div class="mobile-menu">
           <ul class="menu">
-          <li class="menu-item"><a href="./who-we-are">Who we are</a>
+          <li class="menu-item"><a href="./who-we-are">Who We Are</a>
+          </li>
+          <li class="menu-item"><a href="./ourapproach">Our Approach</a>
           </li>
           <li class="menu-item active"><a href="./opportunities">Opportunities</a>
+          </li>
+          <li class="menu-item"><a href="./products">Products</a>
           </li>
           <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blog</a>
           </li>
@@ -570,7 +569,7 @@
   <section class="footer" style="background-color: #fff;">
       <div class="container">
           <div class="row">
-              <div class="col-12 col-xs-12 col-sm-4 col-md-4 col-lg-4 col-xl-4 logo_address">
+              <div class="col-12 col-xs-12 col-sm-3 col-md-3 col-lg-3 col-xl-3 logo_address">
                   <a href="/" alt="caryond" style="text-decoration: none;">
                   <img alt="crayond@2x" src="./images/logo-crayond@2x.jpg" width="115px" />
                   </a>
@@ -578,9 +577,22 @@
                   <p class="fontGraphikRegular">All rights reserved</p>
               </div>
               <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
-                  <a href="/who-we-are"  alt="Company" style="color: unset;">
+                <a href="/who-we-are"  alt="Company" style="color: unset;">
+                    <span class="fontLatoBold footer_menu">
+                            Who&nbsp;We&nbsp;Are
+                    </span>
+                </a>
+                <!-- <ul>
+                    <li><span class="fontLatoRegular">Who we are?</span></li>
+                    <li><span class="fontLatoRegular">Pricing</span></li>
+                    <li><span class="fontLatoRegular">Careers</span></li>
+                    <li><span class="fontLatoRegular">Contact</span></li>
+                </ul> -->
+              </div>
+              <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
+                  <a href="/ourapproach"  alt="Company" style="color: unset;">
                       <span class="fontLatoBold footer_menu">
-                          Who we are
+                            Our&nbsp;Approach
                       </span>
                   </a>
                   <!-- <ul>
@@ -603,7 +615,7 @@
                       <li><span class="fontLatoRegular">SaaS</span></li>
                   </ul> -->
               </div>
-              <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
+              <div class="col-6 col-sm-1 col-xs-6 col-md-1 col-lg-1 col-xl-1 menu_list" style="margin: auto;">
                   <a href="https://medium.com/crayond"  alt="Blogs" target="_blank" style="color: unset;">
                    <span class="fontLatoBold footer_menu">
                       Blog
@@ -615,7 +627,7 @@
                       <li><span class="fontLatoRegular">FAQ</span></li>
                   </ul> -->
               </div>
-              <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list contact_footer_menu" style="margin: auto;">
+              <div class="col-12 col-sm-2 col-xs-12 col-md-2 col-lg-2 col-xl-2 menu_list contact_footer_menu" style="margin: auto;">
                   <a href="/contact"  alt="Company" style="color: unset;">
                    <span class="fontLatoBold footer_menu">
                       Contact
