--- a/ourapproach.html
+++ b/ourapproach.html
@@ -107,16 +107,11 @@
                         <a href="/" class="logo" alt="crayond" ><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 header_menu">
-                        <span class="activee"><a class="fontLatoRegular" href="/who-we-are">Who we are</a></span>
-                        <!-- <span><a class="fontLatoRegular" href="/">Products</a></span> -->
-                        <!-- <span><a class="fontLatoRegular" href="/">Pricing</a></span> -->
-                        <span><a class="fontLatoRegular" href="/opportunities">Opportunities</a> </span>
+                        <span ><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
+                        <span class="active" ><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
+                        <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/products">Products</a><tag>NEW</tag></span>
                         <span><a class="fontLatoRegular" href="https://medium.com/crayond" target="_blank">Blog</a></span>
                         <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
-                        <span>
-                            <a class="fontLatoRegular" href="/products">Products</a>
-                            <tag>NEW</tag>
-                        </span>
                     </div>
                     <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 sign_btn">
                         <button class="btn btn-outline-primary fontLatoBlack" onclick="window.location.href = './contact'" >TALK TO US</button>
@@ -137,9 +132,13 @@
         </div>
         <div class="mobile-menu">
             <ul class="menu">
-            <li class="menu-item"><a href="./who-we-are">Who we are</a>
+            <li class="menu-item"><a href="./who-we-are">Who We Are</a>
+            </li>
+            <li class="menu-item active"><a href="./ourapproach">Our Approach</a>
             </li>
             <li class="menu-item"><a href="./opportunities">Opportunities</a>
+            </li>
+            <li class="menu-item"><a href="./products">Products</a>
             </li>
             <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blog</a>
             </li>
@@ -470,8 +469,8 @@
                         <!-- <div class="img_section" style="margin: auto;"> -->
                             <tapSection style="padding-left: 0;margin-left: 0;"><span class="active_build tap3" data-build="1">1.&nbsp;Setup&nbsp;Environment</span></tapSection><span class="horizontal_line"></span>
                             <tapSection><span class="tap3" data-build="2">2.&nbsp;Sprint</span></tapSection><span class="horizontal_line"></span>
-                            <tapSection><span class="tap3" data-build="3">3.&nbsp;Front&#8211;End</span></tapSection><span class="horizontal_line"></span>
-                            <tapSection><span class="tap3" data-build="4">4.&nbsp;Back&#x02010;End</span></tapSection><span class="horizontal_line"></span>
+                            <tapSection><span class="tap3 space_in_word" data-build="3">3.&nbsp;Front-End</span></tapSection><span class="horizontal_line"></span>
+                            <tapSection><span class="tap3 space_in_word" data-build="4">4.&nbsp;Back-End</span></tapSection><span class="horizontal_line"></span>
                             <tapSection style="padding-right: 0;border: 0;margin-right: 0;"><span class="tap3" data-build="5">5.&nbsp;Integration</span></tapSection>
                         </div>
                     </div>
@@ -654,7 +653,7 @@
     <section class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 logo_address">
+                    <div class="col-12 col-xs-12 col-ms-12 col-md-3 col-lg-3 col-xl-3 logo_address">
                             <a href="/" alt="caryond" style="text-decoration: none;">
                         <img alt="crayond@2x" src="./images/logo-crayond@2x.jpg" width="115px" />
                         </a>
@@ -664,7 +663,20 @@
                     <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
                         <a href="/who-we-are"  alt="Company" style="color: unset;">
                             <span class="fontLatoBold footer_menu">
-                                    Who we are
+                                Who&nbsp;We&nbsp;Are
+                            </span>
+                        </a>
+                        <!-- <ul>
+                            <li><span class="fontLatoRegular">Who we are?</span></li>
+                            <li><span class="fontLatoRegular">Pricing</span></li>
+                            <li><span class="fontLatoRegular">Careers</span></li>
+                            <li><span class="fontLatoRegular">Contact</span></li>
+                        </ul> -->
+                    </div>
+                    <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
+                        <a href="/ourapproach"  alt="Company" style="color: unset;">
+                            <span class="fontLatoBold footer_menu">
+                                   Our&nbsp;Approach
                             </span>
                         </a>
                         <!-- <ul>
@@ -687,7 +699,7 @@
                             <li><span class="fontLatoRegular">SaaS</span></li>
                         </ul> -->
                     </div>
-                    <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
+                    <div class="col-6 col-sm-12 col-xs-6 col-md-1 col-lg-1 col-xl-1 menu_list" style="margin: auto;">
                         <a href="https://medium.com/crayond" target="_blank" alt="Blogs" style="color: unset;">
                          <span class="fontLatoBold footer_menu">
                             Blog
@@ -699,7 +711,7 @@
                             <li><span class="fontLatoRegular">FAQ</span></li>
                         </ul> -->
                     </div>
-                    <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
+                    <div class="col-12 col-sm-12 col-xs-12 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
                         <a href="/contact"  alt="contact" style="color: unset;">
                          <span class="fontLatoBold footer_menu">
                                 Contact
@@ -1009,7 +1021,7 @@
         $("#tap-menu").removeClass("tap_fixed");
 
     }else{
-        $("#tap-menu").addClass("tap_fixed");
+        // $("#tap-menu").addClass("tap_fixed");
     }
 
     });
