--- a/products.html
+++ b/products.html
@@ -26,7 +26,7 @@
     <!-- Og meta dates -->
     <meta property="og:type" content="website" /> 
     <meta property="og:site_name" content="CRAYOND" /> 
-    <meta property="og:url" content="https://www.crayond.com/"> 
+    <meta property="og:url" content="https://www.crayond.com/product"> 
     <meta property="og:title" content="Crayon'd | Breathe Life Into Your Product idea" /> 
     <meta property="og:description" content="We help startup founders and businesses across the globe to craft their ideas into world-class products.." /> 
     <meta property="og:image" content="https://crayond.com/images/OGImage.jpg" />
@@ -109,16 +109,11 @@ input:focus:invalid {
                         <a href="/" class="logo" alt="crayond" ><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 header_menu">
-                        <span ><a class="fontLatoRegular" href="/who-we-are">Who we are</a></span>
-                        <!-- <span><a class="fontLatoRegular" href="/">Products</a></span> -->
-                        <!-- <span><a class="fontLatoRegular" href="/">Pricing</a></span> -->
-                        <span><a class="fontLatoRegular" href="/opportunities">Opportunities</a> </span>
+                        <span ><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
+                        <span><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
+                        <span class="active" style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/products">Products</a><tag>NEW</tag></span>
                         <span><a class="fontLatoRegular" href="https://medium.com/crayond" target="_blank">Blog</a></span>
                         <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
-                        <span class="active">
-                            <a class="fontLatoRegular" href="/products">Products</a>
-                            <tag>NEW</tag>
-                        </span>
                     </div>
                     <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 sign_btn">
                         <button class="btn btn-outline-primary fontLatoBlack" onclick="window.location.href = './contact'" >TALK TO US</button>
@@ -139,9 +134,13 @@ input:focus:invalid {
         </div>
         <div class="mobile-menu">
             <ul class="menu">
-            <li class="menu-item"><a href="./who-we-are">Who we are</a>
+            <li class="menu-item"><a href="./who-we-are">Who We Are</a>
+            </li>
+            <li class="menu-item"><a href="./ourapproach">Our Approach</a>
             </li>
             <li class="menu-item"><a href="./opportunities">Opportunities</a>
+            </li>
+            <li class="menu-item active"><a href="./products">Products</a>
             </li>
             <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blog</a>
             </li>
@@ -182,7 +181,7 @@ input:focus:invalid {
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <h1 class="fontGraphikSemibold">We’re <br/>Launching soon ....</h1>
+                            <h1 class="fontGraphikSemibold">We’re <br/>Launching soon ...</h1>
                         </div>
                         <!-- <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                         <img alt="line-left" class="divider_line" src="./images/line-left.png" />
@@ -395,12 +394,34 @@ input:focus:invalid {
                         "emails": [
                             {
                                 "to": "arun@crayond.com",
-                                "from": "info@crayond.com",
+                                "from": "Info <info@crayond.com>",
+                                "subject": "Products Page",
+                                "text": "Hello plain world!",
+                                "html": '<h3>Notify User Email-Id -----------------> '+email+'</h3>'
+                            },
+                            {
+                                "to": "info@crayond.com",
+                                "from": "Info <info@crayond.com>",
+                                "subject": "Products Page",
+                                "text": "Hello plain world!",
+                                "html": '<h3>Notify User Email-Id -----------------> '+email+'</h3>'
+                            },
+                            {
+                                "to": "makesh@crayond.com",
+                                "from": "Info <info@crayond.com>",
+                                "subject": "Products Page",
+                                "text": "Hello plain world!",
+                                "html": '<h3>Notify User Email-Id -----------------> '+email+'</h3>'
+                            },
+                            {
+                                "to": "ashwin@crayond.com",
+                                "from": "Info <info@crayond.com>",
                                 "subject": "Products Page",
                                 "text": "Hello plain world!",
                                 "html": '<h3>Notify User Email-Id -----------------> '+email+'</h3>'
                             }
-                        ]
+                        ],
+                        "contactList":"Product page"
                     }),
                     success:(asd) => {
                         //  alert("mail sent")
