--- a/who-we-are.html
+++ b/who-we-are.html
@@ -84,16 +84,11 @@
                         <a href="/" class="logo" alt="crayond" ><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 header_menu">
-                        <span class="active"><a class="fontLatoRegular" href="/who-we-are">Who we are</a></span>
-                        <!-- <span><a class="fontLatoRegular" href="/">Products</a></span> -->
-                        <!-- <span><a class="fontLatoRegular" href="/">Pricing</a></span> -->
-                        <span><a class="fontLatoRegular" href="/opportunities">Opportunities</a> </span>
+                        <span class="active" ><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
+                        <span ><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
+                        <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/products">Products</a><tag>NEW</tag></span>
                         <span><a class="fontLatoRegular" href="https://medium.com/crayond" target="_blank">Blog</a></span>
                         <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
-                        <span>
-                            <a class="fontLatoRegular" href="/products">Products</a>
-                            <tag>NEW</tag>
-                        </span>
                     </div>
                     <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 sign_btn">
                         <button class="btn btn-outline-primary fontLatoBlack"onclick="window.location.href = './contact'" >TALK TO US</button>
@@ -114,9 +109,13 @@
         </div>
         <div class="mobile-menu">
             <ul class="menu">
-                  <li class="menu-item active"><a href="./who-we-are">Who we are</a>
+                  <li class="menu-item active"><a href="./who-we-are">Who We Are</a>
                 </li>
-                  <li class="menu-item"><a href="./opportunities">Opportunities</a>
+                <li class="menu-item"><a href="./ourapproach">Our Approach</a>
+                </li>
+                <li class="menu-item"><a href="./opportunities">Opportunities</a>
+                </li>
+                <li class="menu-item"><a href="./products">Products</a>
                 </li>
                   <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blog</a>
                 </li>
@@ -389,7 +388,7 @@
     <section class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 logo_address">
+                <div class="col-12 col-xs-12 col-ms-12 col-md-3 col-lg-3 col-xl-3 logo_address">
                     <a href="/" alt="caryond" style="text-decoration: none;">
                     <img alt="crayond@2x" src="./images/logo-crayond@2x.jpg" width="115px" />
                     </a>
@@ -399,7 +398,20 @@
                 <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
                     <a href="/who-we-are"  alt="Company" style="color: unset;">
                         <span class="fontLatoBold footer_menu">
-                                Who we are
+                                Who&nbsp;We&nbsp;Are
+                        </span>
+                    </a>
+                    <!-- <ul>
+                        <li><span class="fontLatoRegular">Who we are?</span></li>
+                        <li><span class="fontLatoRegular">Pricing</span></li>
+                        <li><span class="fontLatoRegular">Careers</span></li>
+                        <li><span class="fontLatoRegular">Contact</span></li>
+                    </ul> -->
+                </div>
+                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
+                    <a href="/ourapproach"  alt="Company" style="color: unset;">
+                        <span class="fontLatoBold footer_menu">
+                               Our&nbsp;Approach
                         </span>
                     </a>
                     <!-- <ul>
@@ -422,7 +434,7 @@
                         <li><span class="fontLatoRegular">SaaS</span></li>
                     </ul> -->
                 </div>
-                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
+                <div class="col-6 col-sm-12 col-xs-6 col-md-1 col-lg-1 col-xl-1 menu_list" style="margin: auto;">
                     <a href="https://medium.com/crayond" target="_blank" alt="Blogs" style="color: unset;">
                      <span class="fontLatoBold footer_menu">
                         Blog
@@ -434,7 +446,7 @@
                         <li><span class="fontLatoRegular">FAQ</span></li>
                     </ul> -->
                 </div>
-                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
+                <div class="col-12 col-sm-12 col-xs-12 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
                     <a href="/contact"  alt="contact" style="color: unset;">
                      <span class="fontLatoBold footer_menu">
                             Contact
