--- a/products.html
+++ b/products.html
@@ -377,7 +377,7 @@ input:focus:invalid {
                $(".alert").addClass("alert-danger");
                $(".alert").removeClass("alert-success");
                $(".email_error").css("opacity" , "1");
-               $(".error_msg").text("Opps! Enter your correct email address");
+               $(".error_msg").text("Oops`! Enter your correct email address");
                $(".coming_soon_email input").css("border-color", "#dc3545");
 
                return false
