final up to date

--- a/products.html
+++ b/products.html
@@ -205,7 +205,7 @@ input:focus:invalid {
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 desktop_responce_img" style="padding: 0;">
-                        <div class="img_section " style="margin: auto;margin-right: -40px;margin-left: -20px;">
+                        <div class="img_section " style="margin: auto;margin-right: -40px;margin-left: -20px;margin-top: 40px;">
                             <img alt="Products Customer Love" style="padding:0;border-radius: 0;" src="./images/coming-soon-new.png" />
                         </div>
                     </div>
