final up to date new on nav

--- a/who-we-are.html
+++ b/who-we-are.html
@@ -109,17 +109,17 @@
         </div>
         <div class="mobile-menu">
             <ul class="menu">
-                  <li class="menu-item active"><a href="./who-we-are">Who We Are</a>
+                <li class="menu-item active"><a href="./who-we-are">Who We Are</a>
                 </li>
                 <li class="menu-item"><a href="./ourapproach">Our Approach</a>
                 </li>
                 <li class="menu-item"><a href="./opportunities">Opportunities</a>
                 </li>
-                <li class="menu-item"><a href="./products">Products</a>
+                <li class="menu-item" style="position: relative;"><a href="./products">Products</a><tag>NEW</tag>
                 </li>
-                  <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blog</a>
+                <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blog</a>
                 </li>
-                  <li class="menu-item"><a href="./contact">Contact</a>
+                <li class="menu-item"><a href="./contact">Contact</a>
                 </li>
             <!-- <li class="menu-item" style="border: none;text-align: center;margin-top: 30px;">
                 <button style="padding: 10px 30px;" class="btn btn-outline-primary fontLatoBlack contact_btn" onclick="window.location.href='/contact'" >SIGN IN</button>
