--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
             </li>
             <li class="menu-item"><a href="./opportunities">Opportunities</a>
             </li>
-            <li class="menu-item"><a href="./products">Products</a>
+            <li class="menu-item" style="position: relative;"><a href="./products">Products</a><tag>NEW</tag>
             </li>
             <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blog</a>
             </li>
