--- a/products.html
+++ b/products.html
@@ -140,7 +140,7 @@ input:focus:invalid {
             </li>
             <li class="menu-item"><a href="./opportunities">Opportunities</a>
             </li>
-            <li class="menu-item active"><a href="./products">Products</a>
+            <li class="menu-item active" style="position: relative;"><a href="./products">Products</a><tag>NEW</tag>
             </li>
             <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blog</a>
             </li>
