added life crayond section

--- a/opportunities.html
+++ b/opportunities.html
@@ -225,6 +225,81 @@
     </section>
     <!-- end -->
 
+    <!-- life_craoyond -->
+    <section class="life_craoyond">
+        <div class="container">
+            <div class="text">
+                <p class="flag">
+                    <span>Life @Crayond</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="156" height="32" viewBox="0 0 156 32">
+                        <path fill="#30B67B" fill-rule="evenodd" d="M111 0h45l-17 16 17 16H4a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4h107z"/>
+                    </svg>
+                </p>
+                <h1 class="fontGraphikSemibold">
+                    Second Home. Epic Work. Fun Unlimited.
+                </h1>
+                <p class="description">
+                    We understand that it's an incredibly large mission that our team of<br/> young minds is committed to succeed in.
+                </p>    
+            </div>
+        </div>
+        <div class="row">
+            <div class="container">
+                <div class="Rectangle_card_body">
+                    <div class="cont">
+                        <p class="card_icon" style="background-color: #eff8f6;">
+                        <!-- <img alt="code" src="./images/code.svg" /> -->
+                        <svg xmlns="http://www.w3.org/2000/svg" width="42" height="38" viewBox="0 0 42 38">
+                            <path fill="none" fill-rule="evenodd" stroke="#1EAB8C" stroke-linejoin="round" stroke-width="4" d="M21 28.5l-9.5 6.954 1.273-11.704L2 19l10.773-4.75L11.5 2.546 21 9.5l9.5-6.954-1.273 11.704L40 19l-10.773 4.75L30.5 35.454z"/>
+                        </svg>
+                        </p>
+                        <p class="card-text fontLatoRegular">Great <br>Culture</p>
+                    </div>
+                </div>
+                <div class="Rectangle_card_body">
+                    <div class="cont">
+                        <p class="card_icon" style="background-color: #f3f5ff;">
+                        <img alt="code" src="./images/experimental_learning.png" />
+                        </p>
+                        <p class="card-text fontLatoRegular">Experimental <br/>Learning</p>
+                    </div>
+                </div><div class="Rectangle_card_body">
+                    <div class="cont">
+                        <p class="card_icon" style="background-color: #f3a530;">
+                        <!-- <img alt="code" src="./images/code.svg" /> -->
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="50" viewBox="0 0 30 50">
+                            <g fill="#FFF" fill-rule="nonzero">
+                                <path d="M29.281 26.293h-7.036c2.311-2.057 3.766-5.036 3.766-8.345L26.01 6.124l-1.78.389-3.646.797c-2.276-2.805-4.774-5.874-4.8-5.907L14.64 0l-1.142 1.403c-.027.033-2.524 3.102-4.8 5.907a7691.9 7691.9 0 0 0-3.647-.798l-1.78-.388-.002 11.825c0 3.308 1.455 6.287 3.766 8.344H0v8.67h6.122L9.05 49.316H20.23l2.929-14.353h6.121v-8.67zM6.198 17.95L6.2 9.723l2.754.603.89.195.57-.703a5625.05 5625.05 0 0 1 4.227-5.203c1.08 1.33 2.752 3.386 4.226 5.203l.57.703.89-.195 2.754-.603.002 8.226c0 4.6-3.787 8.344-8.442 8.344-4.656 0-8.443-3.743-8.443-8.344zm11.636 28.477h-6.387l-1.16-5.683h8.707l-1.16 5.683zm1.75-8.573H9.697l-.59-2.89h11.065l-.59 2.89zm6.77-5.78H2.927v-2.89h23.425v2.89z"/>
+                                <path d="M18.896 14.542L14.64 9.247l-4.249 5.286-.007.009a5.21 5.21 0 0 0-1.138 3.26c0 2.931 2.42 5.315 5.394 5.315s5.394-2.384 5.394-5.314a5.21 5.21 0 0 0-1.14-3.261zM14.64 20.3c-1.395 0-2.53-1.12-2.53-2.497 0-.558.184-1.086.532-1.528l1.998-2.486 1.997 2.486c.349.442.533.97.533 1.528 0 1.377-1.135 2.497-2.53 2.497z"/>
+                            </g>
+                        </svg>
+                        </p>
+                        <p class="card-text fontLatoRegular">Thought <br>Leadership</p>
+                    </div>
+                </div><div class="Rectangle_card_body">
+                    <div class="cont">
+                        <p class="card_icon" style="background-color: #f7eff0;">
+                        <img alt="code" src="./images/ambience_icon.png" />
+                        </p>
+                        <p class="card-text fontLatoRegular">Ambience</p>
+                    </div>
+                </div><div class="Rectangle_card_body">
+                    <div class="cont">
+                        <p class="card_icon" style="background-color: #f4f9f9;">
+                        <img alt="code" src="./images/freedom_icon.png" />
+                        </p>
+                        <p class="card-text fontLatoRegular">Freedom</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        </div>
+    </section>
+    <!-- end -->
+
+
     <!-- our_secrets -->
     <section class="our_secrets">
         <div class="container">
